--- a/page3.html
+++ b/page3.html
@@ -51,8 +51,8 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.com">Home</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.com">About</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.com">services</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.com">contact Us</a></li></ul>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html">About</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html">Services</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page3.html">Contact Us</a></li></ul>
                 
                 
             </div>
@@ -82,7 +82,7 @@
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
                             <strong>Phone</strong>
                         </h6>
-                        <p class="mbr-text mbr-fonts-style display-7">+91 9573528783&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="tel:+91 9573528783" class="text-primary">+91 9573528783&nbsp;</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
                     </div>
                 </div>
             </div>
@@ -95,8 +95,8 @@
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
                             <strong>Email</strong>
                         </h6>
-                        <p class="mbr-text mbr-fonts-style display-7">ss17communications@gmail<a href="mailto:info@site.com" class="text-primary">.com</a>
-                        </p>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="mailto:ss17communications@gmail.com" class="text-primary">ss17communications@gmail.com
+                        </a></p>
                     </div>
                 </div>
             </div>
@@ -106,9 +106,7 @@
                         <span class="mbr-iconfont mobi-mbri-globe mobi-mbri"></span>
                     </div>
                     <div class="text-wrapper">
-                        <h6 class="card-title mbr-fonts-style mb-1 display-5">
-                            <strong>Address</strong>
-                        </h6>
+                        <h6 class="card-title mbr-fonts-style mb-1 display-5"><strong>Address</strong></h6>
                         <p class="mbr-text mbr-fonts-style display-7">H.NO 3-87/2 ,GurramGuda,
 <br>Hyderabad,Telangana-501510 
 <br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
@@ -122,8 +120,7 @@
                     </div>
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
-                            <strong>Working Hours</strong>
-                        </h6>
+                            <strong><br></strong><strong>Working Hours&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</strong><br></h6>
                         <p class="mbr-text mbr-fonts-style display-7">
                             9:00 - 18:00
                         </p>
@@ -148,7 +145,7 @@
                 </div>
             </div>
             <div class="col-lg-3 offset-lg-1 mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="3JZGySHtEkxVnP8K4nsFoHqfV1SOyiHKf87Be/jOfbi5Lf4W1vU08zXOkcSH8MfiaBjZR4t60uFOxJdt2ya/lab68q9IUmDzbiaJn1SVZPv9ovpP68tvWK0H8Ai0j/KS">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="WWVqO4LnIZiYXQz6WLaOxETjW0AiVeeDMJxOvEWg0OzCqD4vp/lzB2kACoWmXafAJ2qPrdtgb4fVCMMLHk0Q+hUBxfY3xtybOnVEi++VOZNeUJdLCgtnxtCd0y7i60qg">
                     <div class="">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out
                             the form!</div>
@@ -180,7 +177,7 @@
             <div class="offset-lg-1"></div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/u" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/c" style="color:#aaa;">This</a> site was created with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/e" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Built with Mobirise <a href="https://mobirise.site/j" style="color:#aaa;">website</a> maker</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
