--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/123-214x129.png" type="image/x-icon">
   <meta name="description" content="">
+  <!-- Primary Meta Tags -->
+<title>SS17communications - CCTV & Video Surveillance Systems</title>
+<meta name="title" content="SS17communications - CCTV & Video Surveillance Systems">
+<meta name="description" content="SS17 communications was constituted in 2019 in order to provide highest technological solutions and services in the field of safety ,Security and Communications sector for privately owned in Hyderabad, INDIA.">
+
   
-  
-  <title>Home</title>
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -35,7 +38,7 @@
                         <img src="assets/images/123-214x129.png" alt="Mobirise" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-7" href="https://mobiri.se">SS17communications</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-7" href="#">SS17communications</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
