--- a/page2.html
+++ b/page2.html
@@ -87,7 +87,7 @@
                         <img src="assets/images/epabx-696x311.jpg" alt="" title="">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>EPABX Service</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>EPABX Sales &amp; Service</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">EPABX System  are available for all type of establishments (big &amp; small). Our systems are smallest in size, most economical &amp; full of world-class features. Our INTERCOM systems are suitable to a small housing society to a very large group of buildings society. Our EPABX System series is suitable for mini offices, homes, and small business organizations to medium Corporate, Factories, Hospitals, Colleges and Hotels etc.&nbsp;<br></p>
                     </div>
